default/movies-deployment-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: movies-service
  labels:
    app: movies
spec:
  selector:
    app: movies-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
