default/movies-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: movies-ingress
spec:
  rules:
  - host: movies.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: movies-service
            port:
              number: 80
